cabal-version:      3.0
name:               hydra-demo
version:            0.1.0
synopsis:
  A Rock-Paper-Scissors game using Hydra for payments and communication

homepage:           https://github.com/mlabs-haskell/hydra-demo
license:            Apache-2.0
license-file:       LICENSE
author:             MLabs
maintainer:         anatoly@mlabs.city
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hydra-demo

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    HydraRPS.Node.Command
    HydraRPS.OffChain
    HydraRPS.OnChain
    HydraRPS.Tx
    HydraRPS.UserInput

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , lens
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-tx
    , plutus-tx-plugin
    , text

  hs-source-dirs:  src

executable hydra-rps-game
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , aeson
    , async
    , bytestring
    , cardano-api
    , containers
    , hydra-demo
    , lens
    , plutus-ledger
    , text
    , transformers
    , mtl
    , websockets

  hs-source-dirs: app

test-suite hydra-rps-game-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    OffChain.Test
    Tx.DummyContract
    Tx.Spec

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , filepath
    , hydra-demo
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs: test
