cabal-version:      3.0
name:               hydra-demo
version:            0.1.0
synopsis:
  A Rock-Paper-Scissors game using Hydra for payments and communication

homepage:           https://github.com/mlabs-haskell/hydra-demo
license:            Apache-2.0
license-file:       LICENSE
author:             MLabs
maintainer:         anatoly@mlabs.city
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hydra-demo

flag defer-plugin-errors
  description:
    Defer errors from the plugin,
    useful for things like Haddock that can't handle it.

  default:     True
  manual:      True

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:
    , async
    , base                     ^>=4.14
    , mtl
    , record-dot-preprocessor
    , record-hasfield
    , transformers
    , websockets

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    HydraAuction.App
    HydraAuction.Node.Command
    HydraAuction.OffChain
    HydraAuction.OnChain
    HydraAuction.Tx
    HydraAuction.UserInput
    HydraRPS.App
    HydraRPS.Node.Command
    HydraRPS.OffChain
    HydraRPS.OnChain
    HydraRPS.Tx
    HydraRPS.UserInput

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , lens
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , text

  hs-source-dirs:  src

executable hydra-rps-game
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , hydra-demo
    , lens
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , text

  hs-source-dirs: app

executable hydra-nft-auction
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , hydra-demo
    , lens
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , text

  hs-source-dirs: auction

test-suite hydra-rps-game-test
  import:             common-lang
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    EndToEnd.Spec
    OffChain.Test
    Tx.DummyContract
    Tx.Spec

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , extra
    , filepath
    , hydra-cardano-api
    , hydra-cluster
    , hydra-demo
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , lens
    , lens-aeson
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , tasty
    , tasty-hspec
    , tasty-hunit
    , text

  hs-source-dirs:     test
  build-tool-depends:
    hydra-node:hydra-node -any, cardano-node:cardano-node -any

  ghc-options:        -threaded -rtsopts
